# Sawyer_Ping_Pong

./: README.md  ballMovingInVolume.mkv  markers.mkv  schedule.md
images/: README.md  planeFitting.mkv
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  JointCommand.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  SEAJointState.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h  URDFConfiguration.h
install/include/baxter_examples/: JointSpringsExampleConfig.h
install/include/baxter_interface/: GripperActionServerConfig.h  HeadActionServerConfig.h  PositionFFJointTrajectoryActionServerConfig.h  PositionJointTrajectoryActionServerConfig.h  VelocityJointTrajectoryActionServerConfig.h
install/include/baxter_maintenance_msgs/: CalibrateArmData.h  CalibrateArmEnable.h  TareData.h  TareEnable.h  UpdateSource.h  UpdateSources.h  UpdateStatus.h
install/include/intera_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  CalibrationCommandAction.h  CalibrationCommandActionFeedback.h  CalibrationCommandActionGoal.h  CalibrationCommandActionResult.h  CalibrationCommandFeedback.h  CalibrationCommandGoal.h  CalibrationCommandResult.h  CameraControl.h  CameraSettings.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndpointNamesArray.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  HomingCommand.h  HomingState.h  IOComponentCommand.h  IOComponentCommandSrvRequest.h  IOComponentCommandSrvResponse.h  IOComponentConfiguration.h  IOComponentStatus.h  IODataStatus.h  IODeviceConfiguration.h  IODeviceStatus.h  IONodeConfiguration.h  IONodeStatus.h  IOStatus.h  InteractionControlCommand.h  InteractionControlState.h  JointCommand.h  JointLimits.h  NavigatorState.h  (+8 more)
install/include/intera_examples/: SawyerJointSpringsExampleConfig.h
install/include/intera_interface/: SawyerPositionFFJointTrajectoryActionServerConfig.h  SawyerPositionJointTrajectoryActionServerConfig.h  SawyerVelocityJointTrajectoryActionServerConfig.h
install/include/intera_motion_msgs/: EndpointTrackingError.h  InterpolatedPath.h  JointTrackingError.h  MotionCommandAction.h  MotionCommandActionFeedback.h  MotionCommandActionGoal.h  MotionCommandActionResult.h  MotionCommandFeedback.h  MotionCommandGoal.h  MotionCommandResult.h  MotionStatus.h  TrackingOptions.h  Trajectory.h  TrajectoryAnalysis.h  TrajectoryOptions.h  Waypoint.h  WaypointOptions.h  WaypointSimple.h
install/include/nodelet_pcl_demo/: PointArray.h  dataPoint.h  velocity.h
install/include/realsense2_camera/: Extrinsics.h  IMUInfo.h
install/share/nodelet_pcl_demo/: package.xml
install/share/nodelet_pcl_demo/cmake/: nodelet_pcl_demo-msg-extras.cmake  nodelet_pcl_demo-msg-paths.cmake  nodelet_pcl_demoConfig.cmake
install/share/nodelet_pcl_demo/msg/: dataPoint.msg
launch/: launch1.launch
scripts/: moveSawyer  processCloud  process_image.py  testCameraTracking.py
src/point_cloud_processing/: .gitignore  CMakeLists.txt  README.org  package.xml
src/point_cloud_processing/launch/: README.md  ping.launch  test.launch
src/point_cloud_processing/msg/: file
src/point_cloud_processing/src/: cluster_extractor.cpp  point_publisher.cpp  table_cutoff_settings.py
src/sawyer_ping_pong/src/scripts/PCL_tutorial/: CMakeLists.txt  centroid.cpp  example.hpp
(+237 files in other folders)
