<?xml version="1.0"?>
<package>
  <name>nodelet_pcl_demo</name>
  <version>0.0.0</version>
  <description>
    Demonstration of how using nodelets can reduce CPU overhead, especially when
    working with large messages such as point clouds.
  </description>

  <maintainer email="schultzjarvis@todo.todo">jarvis</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>libpcl1-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>libpcl1</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>rgbd_launch</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
